# kk-rust-1

abs-and-rel-paths/: Cargo.toml
advanced-rust/: custom-deref.rs  custom-regular-ref.rs  drop-resources.rs  forceful-drop.rs  interior-mutability.rs  mem-drop.rs  prevent-ref-thru-weak.rs  ref-count-with-rc.rs  shared-ownership.rs
advanced_features/: complex_numbers.rs  fully_qualified_syntax.rs  function_as_param.rs  inches_and_feet.rs  return_type_never.rs
async-function/: Cargo.toml
async-move/: Cargo.toml
async-returning-future/: Cargo.toml
async-select/: Cargo.toml
check-substr-test/: Cargo.toml
cli_tool/: Cargo.toml
closures,iterators/: basic-closure.rs  capture-env-with-closure.rs  capture-mutable-state.rs  closure-as-func-param.rs  combine-iterator.rs  complex-iterator-chain.rs  custom-iterator.rs  double-vector-elems.rs  filter-elem-using-iter.rs  vector-sum-iterator.rs
complex-module/: Cargo.toml
concurrency/: clone-sender-for-multi-prods.rs  drop-sender-recverror.rs  impl-multi-prod-using-channels.rs  msg-using-channels.rs  poisoned-mutex-multi-thread.rs  shared-ctr-using-mutex.rs  simple-mutex-locking.rs  simple-thread.rs  transfer-ownership.rs  workq-with-multi-consumers.rs
concurrent_url_pinger/: Cargo.toml
custom-err-test/: Cargo.toml
deepseek_tutor/: Cargo.toml
dependency/: Cargo.toml
divide-by-zero-panic-test/: Cargo.toml
env-logger/: Cargo.toml
err-handling-async/: Cargo.toml
factorial-test/: Cargo.toml
file_handling/: Cargo.toml
file_handling/src/: append-to-file.rs  check-file.rs  copy-file.rs  create-dir.rs  create-write-to-file.rs  delete-file.rs  list-files.rs  read-from-file.rs  read-write-bin.rs  rename-file.rs
func-panic-test/: Cargo.toml
generics,traits,lifetimes/: complex-trait.rs  default-trait.rs  generic-functions.rs  generic-struct.rs  lifetime-bound-gen-func.rs  max_value.rs  (+4 more)
kv_store/: Cargo.toml
kv_store/src/: command.rs  main.rs  persistence.rs  store.rs
mydocker/: Cargo.toml
mydocker/src/: cli.rs  docker.rs  main.rs
wasm_log_extractor/: Cargo.toml  index.html
wasm_log_extractor/src/: lib.rs
(+79 files in other folders)
